fix: change carousel subtitle length for a better user experience on small devices

--- a/client/src/app/dashboard/dashboard.component.scss
+++ b/client/src/app/dashboard/dashboard.component.scss
@@ -17,7 +17,7 @@ ngb-carousel .wrapper>img {
   color: white;
   h3 {
     font-family: $font-title-carousel;
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
   p {
     font-family: $font-subtitle-carousel;
